# lmnop-transcribe

./: .copier-answers.yml  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  pyproject.toml
.clinerules/: critical_snippets.md  memory_bank.md
.roo/: wyoming.md
docs/: genindex.md  get_started.md  index.md  reference.md  reference_observable.md  reference_observable_factory.md  reference_operators.md  reference_scheduler.md  reference_subjet.md  sounddevice_mic_stream.py  testing.md
lmnop_transcribe/: __init__.py  audio_source.py  common.py  keyboard_bridge.py  pipeline.py  transcription_service.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
res/: lmnop-transcribe.service
scripts/: install-service.sh  uninstall-service.sh
src/: test_lmnop_transcribe.py
src/lmnop_transcribe/: __init__.py  __main__.py  audio_processor.py  audio_recorder.py  config.py  dbus_service.py  defuddle.py  input_handler.py  logger.py  recorder.py  transcriber.py  trigger_handler.py  user_feedback.py
tests/: test_integration.py  test_integration_transcription.py  test_keyboard_bridge.py  test_lmnop_transcribe.py  test_multiple_sessions.py  test_pipeline.py  test_sessions_simple.py  test_transcription_service.py  test_transcription_service_direct.py
