[project]
name = "lmnop_transcribe"
version = "0.0.0"
description = "…"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "evdev>=1.9.2",
    "numpy>=2.2.5",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/shyndman/lmnop_transcribe"
"Bug Tracker" = "https://github.com/shyndman/lmnop_transcribe/issues"

[project.scripts]
lmnop_transcribe = "lmnop_transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pyright]
include = ["src"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
reportMissingImports = "error"
deprecateTypingAliases = true
reportDeprecated = "information"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 110
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lmnop_transcribe"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
