[project]
name = "lmnop-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.9.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "reactivex>=4.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "wyoming>=1.6.1",
]

[project.scripts]
transcribe = "lmnop_transcribe.pipeline:main"
mic = "lmnop_transcribe.audio_source:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
source-includes = ["tests/"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.pyright]
include = ["src"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
reportMissingImports = "error"
deprecateTypingAliases = true
reportDeprecated = "information"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 110
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lmnop_transcribe"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
